# The-fly-brain-test

./: .dockerignore  .gitignore  Cargo.toml  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  python.yml  rust.yml
configs/: default.yaml
configs/agents/: extended_25.yaml  minimal_15.yaml
configs/controller/: gnn.yaml  rnn.yaml  router.yaml
configs/eval/: full_min.yaml  min_set.yaml
configs/graph/: synthetic.yaml  zenodo.yaml
configs/graph/compression/: louvain.yaml  region_agg.yaml  spectral.yaml
configs/llm/: mock.yaml  yandex.yaml
configs/training/: imitation.yaml  ppo.yaml
crates/flybrain-cli/: Cargo.toml
crates/flybrain-cli/src/: main.rs
crates/flybrain-core/: Cargo.toml
crates/flybrain-core/src/: action.rs  agent.rs  error.rs  graph.rs  lib.rs  task.rs  trace.rs  verify.rs
crates/flybrain-graph/: Cargo.toml
crates/flybrain-graph/src/: builder.rs  error.rs  format.rs  lib.rs  synthetic.rs  zenodo.rs
crates/flybrain-graph/src/compression/: aggregate.rs  celltype_agg.rs  leiden.rs  louvain.rs  mod.rs  region_agg.rs  spectral.rs
crates/flybrain-py/: Cargo.toml
crates/flybrain-py/src/: graph_py.rs  lib.rs  runtime_py.rs  verify_py.rs
crates/flybrain-runtime/: Cargo.toml
crates/flybrain-runtime/src/: bus.rs  lib.rs  scheduler.rs  trace_writer.rs
crates/flybrain-verify/: Cargo.toml
crates/flybrain-verify/src/: budget.rs  lib.rs  schema.rs  tool_use.rs  trace.rs  unit_test.rs
data/benchmarks/fixtures/: bbh_mini.jsonl  gsm8k.jsonl  humaneval.jsonl
data/traces/sample/: README.md
data/traces/sample/degree_preserving/bbh_mini/: bbh_mini__boolean_expressions__0001.trace.json
data/traces/sample/flybrain_imitation/bbh_mini/: bbh_mini__boolean_expressions__0001.trace.json
docs/: architecture.md  baselines.md  benchmarks.md  controller.md  data_contracts.md  embeddings.md  expert_traces.md  final_report.md  graph_pipeline.md  rl_training.md  runtime.md  rust_python_boundary.md  simulation_pretrain.md  verification.md  verification_phase_0_11.md  yandex_setup.md
flybrain/: __init__.py  cli.py
flybrain/agents/: __init__.py  specs.py
flybrain/agents/specs/: __init__.py
flybrain/baselines/: __init__.py  graphs.py  registry.py  round_robin.py
flybrain/benchmarks/: __init__.py  base.py  bbh_mini.py  cli.py  gsm8k.py  humaneval.py  loaders.py  runner.py  synthetic_routing.py
flybrain/controller/: __init__.py  _torch_base.py  action_space.py  base.py  encoder.py  gnn_controller.py  heads.py  learned_router.py  manual.py  random_ctrl.py  rnn_controller.py
flybrain/embeddings/: __init__.py  agent_emb.py  base.py  cache.py  fly_emb.py  graph_emb.py  mock_client.py  state.py  task_emb.py  trace_emb.py  yandex_client.py
flybrain/eval/: __init__.py  metrics.py  reports.py  tables.py
flybrain/graph/: __init__.py  dataclasses.py  pipeline.py
flybrain/llm/: __init__.py  base.py  budget.py  cache.py  mock_client.py  pricing.py  yandex_client.py
flybrain/runtime/: __init__.py  agent.py  runner.py  state.py
flybrain/runtime/memory/: __init__.py  episodic.py  vector.py
flybrain/runtime/retriever/: __init__.py  bm25.py
flybrain/runtime/tools/: __init__.py  base.py  file_tool.py  python_exec.py  unit_tester.py  web_search.py
flybrain/sim/: __init__.py  optimal_routes.py  synthetic_mas.py  task_generator.py
flybrain/training/: __init__.py  expert_dataset.py  imitation.py  simulation_pretrain.py
flybrain/training/rl/: __init__.py  bandit.py  offline_rl.py  ppo.py  reinforce.py  rewards.py
flybrain/verification/: __init__.py  pipeline.py  result.py  rust.py
flybrain/verification/llm/: __init__.py  _judge.py  factual.py  reasoning.py
infra/: Dockerfile  docker-compose.yaml
infra/datasphere/: environment.yaml  project.yaml
infra/datasphere/jobs/: bench_min.yaml  imitation.yaml  ppo.yaml  sim_pretrain.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
notebooks/: 01_explore_connectome.ipynb  04_results_dashboard.ipynb
scripts/: collect_expert_traces.py  run_baselines.py  run_benchmarks.py  run_imitation.py  run_rl.py  run_simulation_pretrain.py
tests/python/integration/: test_mas_runtime_mock.py  test_yandex_live.py
tests/python/unit/: test_agent_specs.py  test_baselines.py  test_benchmarks.py  test_controller_state.py  test_controllers_torch.py  test_embeddings_clients.py  test_embeddings_wrappers.py  test_eval.py  test_graph_builder.py  test_imitation.py  test_llm_budget.py  test_llm_cache.py  test_llm_mock.py  test_llm_yandex.py  test_memory_retriever.py  test_native_bindings.py  test_rl.py  test_runtime_native.py  test_simulation_pretrain.py  test_tools.py  test_verification_judges.py  test_verification_pipeline.py  test_verifier_native.py
