[workspace]
members = [
    "crates/flybrain-core",
    "crates/flybrain-graph",
    "crates/flybrain-runtime",
    "crates/flybrain-verify",
    "crates/flybrain-cli",
    "crates/flybrain-py",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["FlyBrain Optimizer contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/poliroika/The-fly-brain-test"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
anyhow = "1.0"
pyo3 = { version = "0.22", features = ["abi3-py311", "extension-module"] }
flate2 = "1.0"
csv = "1.3"
clap = { version = "=4.5.20", features = ["derive"] }

flybrain-core = { path = "crates/flybrain-core" }
flybrain-graph = { path = "crates/flybrain-graph" }
flybrain-runtime = { path = "crates/flybrain-runtime" }
flybrain-verify = { path = "crates/flybrain-verify" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
