[package]
name = "flybrain-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "FlyBrain Optimizer CLI"

[[bin]]
name = "flybrain"
path = "src/main.rs"

[dependencies]
flybrain-core = { workspace = true }
flybrain-graph = { workspace = true }
flybrain-runtime = { workspace = true }
flybrain-verify = { workspace = true }
