[package]
name = "flybrain-verify"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Deterministic verifiers for FlyBrain Optimizer (schema, budget, trace)"

[dependencies]
flybrain-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
